et-grpc-server/et_k8s/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  labels:
    easytrack: dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      easytrack: dashboard
  template:
    metadata:
      labels:
        easytrack: dashboard
    spec:
      containers:
        - image: qobiljon/et-dashboard:1.0
          name: et-dashboard
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
