et-grpc-server/et_k8s/nginx-host-network.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host-network
spec:
  hostNetwork: true
  containers:
  - name: nginx
    image: nginx
