et-grpc-server/et_k8s/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  type: ClusterIP
  # type: NodePort
  # type: LoadBalancer
  sessionAffinity: ClientIP
  selector:
    easytrack: dashboard
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
      # nodePort: 30080
