et-grpc-server/et_k8s/grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  type: LoadBalancer
  selector:
    easytrack: grpc
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
      nodePort: 30051
