et-grpc-server/et_k8s/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - localhost
        - 127.0.0.1
        - 20.0.0.65
        - 118.217.7.46
      secretName: dash-tls
  defaultBackend:
    service:
      name: dash
      port:
        number: 8443
